fix: content covered by navgation bar of mobile browser

--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -51,6 +51,6 @@ $green-5: #f1fffa;
 @media (max-width: 500px) {
   .about {
     top: unset;
-    bottom: 50px;
+    bottom: 150px;
   }
 }
